Spacing fixes

--- a/wp-content/themes/miltons-nn/scss/site/_elements.scss
+++ b/wp-content/themes/miltons-nn/scss/site/_elements.scss
@@ -379,8 +379,8 @@ p.in-stock {
 .subscribe {
     background-color: white;
     // padding: 20px 10px;
-    .row {
-      margin-bottom: 1rem;
+    .row:not(:last-child) {
+        margin-bottom: 1rem;
     }
 
     .callout {
@@ -408,10 +408,6 @@ p.in-stock {
     .subscribe {
         border: 1px solid black;
         padding: 20px;
-
-        .row:not(:last-child) {
-            margin-bottom: 1rem;
-        }
     }
 
     a.close-reveal-modal {
